--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,11 @@ dependencies {
     //Jackson GEO Datatypes (Java Topology Suite with Jackson)
     implementation 'org.n52.jackson:jackson-datatype-jts:1.2.4'
 
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.3.5'
+    implementation
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
