Updated injections and http interface client methods. Added a EnvService to access information, but its still not loading properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=WeatherBoy
 
-## Keys ##
+## URL and Keys ##
+WEATHER_API_BASE_URL=${WEATHER_API_BASE_URL}
 WEATHER_API_KEY=${WEATHER_API_KEY}
