--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,12 @@ dependencies {
     //Jackson GEO Datatypes (Java Topology Suite with Jackson)
     implementation 'org.n52.jackson:jackson-datatype-jts:1.2.4'
 
-    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.3.5'
+    //implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.3.5'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
+    //runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
@@ -43,7 +43,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     //Env files
-    implementation group: 'me.paulschwarz', name: 'spring-dotenv', version: '4.0.0'
+    implementation "me.paulschwarz:spring-dotenv:4.0.0"
 }
 
 tasks.named('test') {
