--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=WeatherBoy
 
-## URL and Keys ##
-WEATHER_API_BASE_URL=${WEATHER_API_BASE_URL}
-WEATHER_API_KEY=${WEATHER_API_KEY}
+spring.config.import=optional:secrets.properties
