Oath2 Functionality added through Github, removed okta. This concludes the login and we will not feature custom users.

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 
     //Config Properties
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
+
+    //Oath2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
