--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,20 @@
 spring.application.name=WeatherBoy
 
 spring.config.import=optional:secrets.properties
+
+
+## Jackson ##
+spring.jackson.default-property-inclusion=non_absent
+
+
+## Security ##
+spring.security.oauth2.client.registration.github.client-id=${weatherboy-secrets.github-client-id}
+spring.security.oauth2.client.registration.github.client-secret=${weatherboy-secrets.github-secret}
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.scope=read:user
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.github.client-name=GitHub
+
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
