Database construction almost finished. Massive changes to reactive vs non reactive components (This merge should be banned from ever being made but its many hours of toil and sweat because im dumb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.security.oauth2.client.registration.github.client-name=GitHub
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+
+## Database ##
+spring.datasource.url=jdbc:postgresql://localhost:5432/${weatherboy-secrets.postGresDBName}
+spring.datasource.username=${weatherboy-secrets.post-gres-username}
+spring.datasource.password=${weatherboy-secrets.post-gres-password}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
