--- a/build.gradle
+++ b/build.gradle
@@ -24,29 +24,33 @@ repositories {
 }
 
 dependencies {
-    //Jackson DateTime Deserializer
+    // Jackson DateTime Deserializer
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
 
-    //Jackson GEO Datatypes (Java Topology Suite with Jackson)
-    implementation 'org.n52.jackson:jackson-datatype-jts:1.2.4'
+    //Postgre
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
 
 
+    // Spring Boot dependencies
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
-
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    //Config Properties
+    // Testing dependencies
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    // Configuration properties
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
-    //Oath2
+    // OAuth2 support
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // Entity validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
