The users are not being loaded from the database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${weatherboy-secrets.post
 spring.datasource.username=${weatherboy-secrets.post-gres-username}
 spring.datasource.password=${weatherboy-secrets.post-gres-password}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+## Logging ##
+logging.level.org.springframework.security=TRACE
