--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jackson.default-property-inclusion=non_absent
 
 
 ## Security ##
-
+weatherboy-secrets.Jwt-secret-key=${weatherboy-secrets.Jwt-secret-key}
 
 ## Database ##
 spring.datasource.url=jdbc:postgresql://localhost:5432/${weatherboy-secrets.postGresDBName}
