--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,18 @@ dependencies {
 
     // Entity validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    //Oauth2 JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
+
+
+
 }
 
 tasks.named('test') {
